# Embedded-Function

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: benchmark.yml  cd-release.yml  test.yml
benchmark/: CMakeLists.txt  CmakeLists.txt  HOW-TO-BENCHMARK.md  benchmark.hpp  benchmark_free_function.cpp  benchmark_functor.cpp  benchmark_lambda.cpp  benchmark_main.cpp
benchmark/compiletime/: analyze.py  benchmark_baseline.cpp  benchmark_make_fn.cpp  run_benchmark.sh
benchmark/runtime/: benchmark.hpp  benchmark_free_function.cpp
cmake/: embedded_function.cmake.in
docs/api/: basic_fn.md  fn.md  fn_ref.md  fn_view.md  make_fn.md  safe_fn.md  unique_fn.md
docs/api/detail/: function.md
docs/perf/: arm_gcc_asm_analysis.md  riscv_gcc_asm_analysis.md  x86_64_msvc_asm_analysis.md
docs/release/: release_notes.md
include/embed/: embed_function.hpp  embed_function_nostd.hpp
test/: CMakeLists.txt  HOW-TO-TEST.md  invoke-test.cpp  test_AssignAndConvert.cpp  test_BasicAttributes.cpp  test_Benchmark.cpp  test_CompilerBugs.cpp  test_DetailTraits.cpp  test_InitFunction.cpp  test_Swap.cpp  test_ThrowDeath.cpp  test_UnaryDereference.cpp  test_function.hpp
test/conformance/fn_ref/: assign.delete.pass.cpp  copy.pass.cpp  copy_assign.pass.cpp  function_ptr.pass.cpp  move.pass.cpp  move_assign.pass.cpp  ref.pass.cpp
